Fix horizontal scroll

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -44,7 +44,7 @@ body {
 
   &__item {
     display: flex;
-    padding-right: 181px;
+    padding-right: 80px;
   }
 
   &__nav {
